--- a/index.css
+++ b/index.css
@@ -153,6 +153,7 @@ body {
   }
 }
 
+
 @media (max-width: 700px) {
   .content h1 {
     width: 10ch;
@@ -163,7 +164,16 @@ body {
 
   }
 }
-
+@media (max-width: 400px) {
+  .content h1 {
+    width: 10ch;
+    font-size: 3rem;
+    margin-top: -150px;
+  }
+  .content a{
+      margin-bottom: -150px;
+  }
+}
 /* FOOTER CSS  */
 .fa-brands {
   width: auto;
@@ -270,11 +280,16 @@ span {
     margin-bottom: 10px;
   }
 }
+@media (max-width: 800px) {
+    .footer img{
+        color: #1ed760;
+        margin-bottom: -80px;
+    }
 /* COPY */
 
 .copy {
   display: flex;
-  width: 70%;
+  width: 60%;
   padding-top: 100px;
   padding-bottom: 50px;
   align-items: center;
