--- a/index.css
+++ b/index.css
@@ -164,14 +164,17 @@ body {
 
   }
 }
-@media (max-width: 400px) {
+@media (max-width: 470px) {
   .content h1 {
-    width: 10ch;
+    width: 100%;
     font-size: 3rem;
     margin-top: -150px;
   }
+  .content p{
+      width: 30ch;
+  }
   .content a{
-      margin-bottom: -150px;
+      margin-bottom: -180px;
   }
 }
 /* FOOTER CSS  */
@@ -198,6 +201,7 @@ body {
 .footer {
   height: auto;
   width: 100%;
+  
   background-color: #000;
 }
 .footer-container {
@@ -280,7 +284,7 @@ span {
     margin-bottom: 10px;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 470px) {
     .footer img{
         color: #1ed760;
         margin-bottom: -80px;
