--- a/index.css
+++ b/index.css
@@ -367,3 +367,15 @@ span {
         text-align: left;
     }
 }
+.eu{
+    display: block;
+    margin: 0 auto;
+    width: max-content;
+    color: white;
+    padding-bottom: 40px;
+    cursor: pointer;
+}
+.eu a{
+    text-decoration: none;
+    color: red;
+}
