--- a/index.css
+++ b/index.css
@@ -252,9 +252,10 @@ span {
 }
 /* Mediaquery footer */
 
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .footer-container {
     gap: 20px;
+    padding: 20px;
     width: 100%;
   }
   .footer .img {
