--- a/index.css
+++ b/index.css
@@ -31,14 +31,27 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+@keyframes slideRight {
+    from {
+      opacity: 0;
+      margin-right: -100px;
+    }
+    to {
+      opacity: 1;
+
+    }
+  }
 .itens a {
   text-decoration: none;
   color: white;
   align-items: center;
   font-size: 0.9rem;
+  display: inline-block;
   letter-spacing: 0.1rem;
   align-items: center;
   font-weight: bold;
+  animation: slideRight 0.3s forwards;
+
 }
 .itens a:hover {
   color: #1ed760;
@@ -91,6 +104,7 @@ body {
     flex-direction: column;
     width: max-content;
   }
+  
   .itens a {
     display: inline-block;
     width: 200px;
@@ -98,6 +112,7 @@ body {
     padding: 10px;
     background-color: rgba(36, 35, 35, 0.667);
     border-radius: 4px;
+
   }
 }
 /* MAIN - CONTEUDO  CSS*/
