--- a/index.css
+++ b/index.css
@@ -158,7 +158,12 @@ body {
 }
 /* MEDIAQUERY MAIN */
 
-@media (max-width: 1000px) {
+@media(max-width:2000px){
+  .nav-mob{
+    display: none;
+  }
+}
+@media (max-width: 1000px)  {
   .content h1 {
     margin-top: 0px;
     font-size: 5rem;
@@ -166,6 +171,9 @@ body {
   .content p {
     text-align: center;
     width: 40ch;
+  }
+  .nav-mob{
+    display: none;
   }
 }
 
@@ -178,6 +186,9 @@ body {
   .content p{
       font-size: 0.900rem;
 
+  }
+  .nav-mob{
+    display: none;
   }
 }
 @media (max-width: 470px) {
@@ -192,6 +203,27 @@ body {
   .content a{
       margin-bottom: -180px;
   }
+  .itens{
+    display: none;
+  }
+  .img{
+    display: none;
+  }
+  .nav-mob{
+    display: block;
+  }
+  .nav-mob img {
+    width: 130px;
+    background-color: #000;
+  }
+  .nav-mob {
+   display: flex;
+   width:300px;
+   margin: 0 auto;
+   align-items : center;
+   justify-content: space-around;
+  }
+
 }
 /* FOOTER CSS  */
 .fa-brands {
