--- a/mobile.css
+++ b/mobile.css
@@ -10,8 +10,10 @@
   background-color: #000;
   width: 100vw;
   z-index: 10;
-  height: 100vh;
+  height:420px;
   padding-top: 20px;
+  border-top: 1px solid greenyellow;
+  border-bottom: 1px solid greenyellow;
 }
 .mobile li {
   color: white;
@@ -21,16 +23,15 @@
   align-items: center;
 }
 .mobile-itens a {
-  font-weight: bold;
-  width: 150px;
+  width: 230px;
   color: #f0efef;
   display: inline-block;
   border-radius: 4px;
   padding: 10px;
-  margin-left: 130px;
+  margin-left: 90px;
   background-color: #111;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 2rem;
   text-align: center;
 }
 .mobile a:hover {
