--- a/mobile.css
+++ b/mobile.css
@@ -14,6 +14,8 @@
   padding-top: 20px;
   border-top: 1px solid greenyellow;
   border-bottom: 1px solid greenyellow;
+  font-family: monospace;
+  box-sizing: border-box;
 }
 .mobile li {
   color: white;
@@ -23,12 +25,12 @@
   align-items: center;
 }
 .mobile-itens a {
-  width: 230px;
+  width: 240px;
   color: #f0efef;
   display: inline-block;
   border-radius: 4px;
   padding: 10px;
-  margin-left: 90px;
+  margin-left: 110px;
   background-color: #111;
   text-decoration: none;
   font-size: 2rem;
