--- a/mobile.css
+++ b/mobile.css
@@ -13,7 +13,6 @@
   height:420px;
   padding-top: 20px;
   border-top: 1px solid greenyellow;
-  border-bottom: 1px solid greenyellow;
   font-family: monospace;
   box-sizing: border-box;
 }
@@ -35,6 +34,8 @@
   text-decoration: none;
   font-size: 2rem;
   text-align: center;
+  animation: slideM .3s alternate;
+
 }
 .mobile a:hover {
   color: rgb(27, 202, 27);
@@ -43,4 +44,12 @@
 
 .ativo {
   display: block;
+}
+
+@keyframes slideM {
+  from{
+    transform: translate3d(-30px,0,0);
+  }to{
+    transform: translate3d(0,0,0);
+  }
 }
