--- a/mobile.css
+++ b/mobile.css
@@ -23,8 +23,8 @@
   list-style: none;
   align-items: center;
 }
-.mobile-itens a {
-  width: 260px;
+.mobile-itens a{
+  width: 15ch;
   color: #f0efef;
   display: inline-block;
   border-radius: 4px;
@@ -34,7 +34,7 @@
   text-decoration: none;
   font-size: 2rem;
   text-align: center;
-  animation: slideM .3s alternate;
+  animation: slideM .3s forwards;
 
 }
 .mobile a:hover {
@@ -47,9 +47,10 @@
 }
 
 @keyframes slideM {
-  from{
-    transform: translate3d(-30px,0,0);
+  from{opacity: 0;
+    transform: translate3d(-130px,0,0);
   }to{
+    opacity: 3;
     transform: translate3d(0,0,0);
   }
 }
