--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,4 @@
-@media(max-width:470px){
-  
-}
+
 .mobile {
   position: absolute;
   top: 100px;
@@ -29,14 +27,18 @@
   display: inline-block;
   border-radius: 4px;
   padding: 10px;
-  margin-left: 100px;
-  background-color: #111;
+  margin-left: 115px;
+  background-color: #333;
   text-decoration: none;
   font-size: 2rem;
   text-align: center;
-  animation: slideM .3s forwards;
 
 }
+.mobile-itens li{
+  animation: slideLeft .3s forwards;
+  
+}
+
 .mobile a:hover {
   color: rgb(27, 202, 27);
 }
@@ -46,11 +48,11 @@
   display: block;
 }
 
-@keyframes slideM {
+@keyframes slideLeft {
   from{opacity: 0;
     transform: translate3d(-130px,0,0);
   }to{
-    opacity: 3;
+    opacity: 1;
     transform: translate3d(0,0,0);
   }
 }
