--- a/mobile.css
+++ b/mobile.css
@@ -8,9 +8,8 @@
   background-color: #000;
   width: 100vw;
   z-index: 10;
-  height:420px;
+  height:800px;
   padding-top: 20px;
-  border-top: 1px solid greenyellow;
   font-family: arial;
   box-sizing: border-box;
 }
@@ -52,6 +51,14 @@
 .mobile-itens .letrap{
   font-size: 1.5rem;
 }
+.mobile-itens img{
+  width: 100px;
+  margin-top: 180px;
+  margin-left: -14px;
+  animation: slideLeft .3s forwards;
+  
+
+}
 .mobile-itens li{
   animation: slideLeft .3s forwards;
   
@@ -64,14 +71,21 @@
 
 .ativo {
   display: block;
+  
+} 
+.rotate{
+  transform: rotate(90deg) ;
+  transition: .6s;
+ margin-left: -40px;
+ margin-top: -20px;
 }
-
 
 @keyframes slideLeft {
   from{opacity: 0;
-    transform: translate3d(-130px,0,0);
+    transform: translate3d(130px,0,0);
   }to{
     opacity: 1;
     transform: translate3d(0,0,0);
   }
 }
+
