--- a/mobile.css
+++ b/mobile.css
@@ -3,12 +3,13 @@
   position: absolute;
   top: 100px;
   left: 0;
+  bottom: 0;
   display: none;
+  height: 300px;
   flex-direction: column;
   background-color: #000;
   width: 100vw;
   z-index: 10;
-  height:800px;
   padding-top: 20px;
   font-family: arial;
   box-sizing: border-box;
@@ -71,7 +72,6 @@
 
 .ativo {
   display: block;
-  height: 1500px;
 } 
 
 .rotate{
@@ -90,3 +90,10 @@
   }
 }
 
+.scroll{
+  display: none;
+}
+.preto{
+  background-color: rgb(0, 0, 0);
+  color: rgb(139, 129, 129) !important;
+}
