--- a/mobile.css
+++ b/mobile.css
@@ -2,13 +2,10 @@
 .mobile {
   position: absolute;
   top: 70px;
-  left: 0;
-  bottom: 0;
   display: none;
   height: 300px;
   flex-direction: column;
   background-color: #000;
-  width: 100vw;
   z-index: 10;
   padding-top: 20px;
   font-family: arial;
@@ -28,12 +25,12 @@
   color: #f0efef;
   display: inline-block;
   border-radius: 4px;
-   margin-left: 50px;
   text-decoration: none;
   font-size: 1.875rem;
   text-align: left;
 
 }
+
 .mobile-itens li:nth-child(-n+3){
   font-weight: bold;
 }
@@ -92,8 +89,10 @@
   display: none;
 }
 .preto{
-  background-color: rgb(0, 0, 0);
-  color: rgb(139, 129, 129) !important;
+  background-color: #000;
+}
+.preto .content h1{
+  color: black;
 }
 .hamburguer{
   display: flex;
@@ -141,9 +140,6 @@
   display: inline-block;
   transition: .3s;
 
-}
-.logo{
-  margin-left: -200px;
 }
 .none{
   display: none;
